--- a/concepts/core-architecture/test-lifecycle-and-data-flow.mdx
+++ b/concepts/core-architecture/test-lifecycle-and-data-flow.mdx
@@ -1,255 +1,252 @@
 ---
 title: "Test Lifecycle and Data Flow"
-description: "Examine the complete lifecycle of a test in GoogleTest—from discovery and setup, through execution and teardown. Understand how data and control flow between user test cases, assertion macros, result collectors, and the test runner."
+description: "Explains the stages of test execution, including test discovery, setup, execution, and teardown, as well as how data and expectations move through these phases. Highlights the relationship between test registration, runners, results capture, and reporting."
 ---
 
-# Test Lifecycle and Data Flow in GoogleTest
+# Test Lifecycle and Data Flow
 
-Understanding the life of a test in GoogleTest reveals how your test code, GoogleTest's infrastructure, and GoogleMock orchestration collaborate to verify expected behavior. This guide walks you through the test lifecycle from discovery to teardown and illustrates how data and control flow among various GoogleTest components.
-
----
-
-## Introduction
-
-When you write a test using GoogleTest, your goal is simple: run your test code, check your assertions, and get fast, reliable feedback. Yet beneath this simplicity lies a well-coordinated lifecycle ensuring test discovery, execution, result capturing, and teardown happen seamlessly.
-
-This page explains this lifecycle from a user perspective, emphasizing how your user code interacts with assertion macros, mock expectations, result collectors, and the test runner.
-
+Understanding the lifecycle of tests in GoogleTest is crucial for writing effective and maintainable tests. This guide walks you through the major stages of test execution — from discovery to teardown — and explains how data, expectations, and results propagate through these phases. You'll gain clarity into how test registration, execution coordination, and result reporting work together seamlessly behind the scenes.
 
 ---
 
-## High-Level Overview of the Test Lifecycle
+## Overview of the Test Lifecycle
 
-At a high level, a test run in GoogleTest unfolds as follows:
+The lifecycle of a test in GoogleTest can be viewed as a series of distinct, sequential stages that transform user-defined test code into verified results. These stages include:
 
-1. **Test Discovery**: GoogleTest finds all tests compiled into your test binary.
-2. **Test Setup**: For each test, test fixtures (if any) are constructed.
-3. **Test Execution**: Your test body runs, typically containing assertions and mock expectations.
-4. **Assertion Evaluation**: Assertions check conditions and record pass/fail.
-5. **Mock Verification**: Mock objects verify whether expectations were satisfied.
-6. **Test Teardown**: Test fixtures are destructed.
-7. **Result Collection**: Results from assertions and mocks are collected.
-8. **Test Runner Reporting**: The test runner aggregates results and reports summary.
+- **Test Discovery & Registration**
+- **Test Environment Setup**
+- **Test Execution**
+- **Expectation Verification & Teardown**
+- **Result Capture & Reporting**
 
-This cycle repeats for each test case.
-
+This process ensures that tests run in a controlled, consistent manner with automatic handling of setup, execution, and verification. It abstracts complex mechanics, letting you focus on expressing your test intent.
 
 ---
 
-## Detailed Flow and Data Movement
+## 1. Test Discovery & Registration
 
-### 1. Test Discovery
+GoogleTest automatically discovers test cases defined with the `TEST()` and `TEST_F()` macros. These macros register tests with the framework before execution begins.
 
-GoogleTest automatically discovers tests via a global registry where your `TEST()` and `TEST_F()` macros register tests at program startup. This eliminates manual test enumeration.
+### How Discovery Works:
 
-### 2. Test Setup
+- Each test file, when linked into the test binary, includes static objects that register the test cases during program initialization.
+- This registration associates test **suites** (groups of related tests) with individual **test cases**.
 
-Before each test runs, GoogleTest constructs test fixtures (if using `TEST_F()` or similar). This involves calling the fixture's constructor and optional setup methods for preparing the test environment.
+### Why It Matters:
 
-### 3. Test Execution
+Registration enables GoogleTest to:
 
-Your test code executes inside the test method. This is where you invoke:
-
-- Assertion macros like `EXPECT_EQ()`, `ASSERT_TRUE()`, etc.
-- Functions with calls to mock objects created via GoogleMock, exercising `EXPECT_CALL()` expectations.
-
-GoogleMock calls interleave with your test flow, allowing interaction-based testing.
-
-### 4. Assertion Evaluation and Recording
-
-Each assertion macro evaluates the condition immediately. On failure, it records a failure inside GoogleTest’s result framework but continues execution for non-fatal assertions (`EXPECT_` macros).
-
-Assertions update the internal test result collector with information on:
-
-- Success or failure of each assertion
-- Location in source code
-- Failure messages
-
-### 5. Mock Expectation Verification
-
-When mock methods are called, GoogleMock tests argument matchers and call counts in real time.
-
-- If calls violate expectations, GoogleMock immediately reports failures.
-- At test teardown, GoogleMock verifies that all expectations declared via `EXPECT_CALL()` were satisfied.
-
-Mock verification results are recorded in the test’s result collector.
-
-
-### 6. Test Teardown
-
-After test body completion:
-
-- The test fixture is destructed.
-- Mock objects are destructed, triggering final verification.
-
-GoogleTest ensures proper resource release and mocks final checks.
-
-
-### 7. Result Aggregation
-
-GoogleTest collates results from all assertion checks, mock verifications, and test fixtures.
-
-Results include:
-
-- Number of passed and failed assertions
-- Test status (PASS, FAIL)
-- Any runtime failures related to mock misuses
-
-
-### 8. Test Runner Reporting
-
-The test runner aggregates all test case results, printing:
-
-- Per-test pass/fail summary
-- Counts of total tests, tests run, failures
-- Summarized failure reports with source locations and expected vs actual values
-
+- Enumerate all available tests
+- Support filtering to run specific tests
+- Integrate with test runners that execute tests one by one or in batches
 
 ---
 
-## User Intent and Workflows
+## 2. Test Environment Setup
 
-The lifecycle aligns tightly with your goals as a developer:
+Before any actual test methods run, GoogleTest calls global and test fixture setup methods to prepare the environment.
 
-- **Write Test**: Define tests using `TEST()`, `TEST_F()`, and mock classes.
-- **Set Expectations**: Use `EXPECT_CALL()` on mock objects to specify desired interactions.
-- **Run Tests**: Execute tests via your test executable. GoogleTest discovers and runs them.
-- **View Results**: Immediate feedback on assertion and mock expectation results.
-- **Iterate**: Refine test logic, expand mock expectations, fix failures.
+### Involved Components:
 
-This flow helps you design tests that confirm both state and interaction correctness.
+- **Global SetUp and TearDown:** via `Environment` classes registered with GoogleTest, executed before and after all tests
+- **Test Fixture Setup:** for tests with fixtures (`TEST_F()`), `SetUp()` is invoked before each test
 
+### What Happens Here:
+
+- Resources shared across multiple tests (e.g., databases or mock servers) can be initialized once
+- Each individual test prepares its unique environment for execution
+
+### Best Practice Tip:
+
+Keep setup methods focused and lightweight to reduce test runtime and avoid flaky tests.
 
 ---
 
-## Concrete Example: Interactions Among Test Components
+## 3. Test Execution
+
+The core of the test lifecycle is the execution of test methods written by the user.
+
+### Key Points:
+
+- The test runner calls the test function (like the body inside `TEST()` or `TEST_F()`)
+- Within this, users typically perform assertions (`EXPECT_`, `ASSERT_` macros) to verify behavior
+- For tests using mocks, the mock objects intercept calls and validate expectations during this phase
+
+### User Intent:
+
+Tests should clearly express the behavior they validate, focusing on what is expected from the code under test.
+
+---
+
+## 4. Expectation Verification & Teardown
+
+After a test finishes executing, GoogleTest performs verification and cleanup automatically.
+
+### What Happens:
+
+- For tests using GoogleMock, mock objects are destructed, and gMock verifies that all expectations set via `EXPECT_CALL` were satisfied.
+- Test fixtures run their `TearDown()` methods to clean up test-specific resources.
+- Any global teardown from `Environment` classes happens after all tests complete.
+
+### Common Pitfalls to Avoid:
+
+- Delaying expectation verification by destructing mocks late or reusing mocks across tests can lead to false positives/negatives.
+- Always let GoogleTest manage your mock lifetimes or explicitly invoke verification using `Mock::VerifyAndClearExpectations` if necessary.
+
+---
+
+## 5. Result Capture & Reporting
+
+Finally, the outcomes from assertions and mock verifications are collected and reported.
+
+### Internals:
+
+- GoogleTest captures pass/fail results of each assertion within the test.
+- Failures related to unmet mock expectations or unexpected calls are automatically reported.
+- Results are aggregated to show summaries like total tests run, passed, failed, and skipped.
+- Reporting formats include console output, XML reports, and integration with CI dashboards.
+
+### User Perspective:
+
+- Test reports provide precise locations and descriptive messages for failures.
+- Enables rapid debugging and correction with contextual information.
+
+---
+
+## Data and Expectation Flow
+
+Understanding how data and expectations move across the lifecycle clarifies test behavior.
+
+1. **Registration Phase:**
+   - Test metadata and mock definitions are registered.
+   - Internal data structures keep track of test suite membership and order.
+
+2. **Setup Phase:**
+   - Shared/global resources are initialized.
+   - Test fixtures prepare the context including mock object creation.
+   - Default mock behaviors (`ON_CALL`) and expectations (`EXPECT_CALL`) are configured.
+
+3. **Execution Phase:**
+   - Mock methods validate expected calls against the expectations.
+   - Each call counts towards its expectation's cardinality (`Times`).
+   - Mocked actions (e.g., return values, side effects) are invoked.
+
+4. **Verification Phase:**
+   - On mock object destruction, gMock checks that all expectations were met.
+   - Any deviations (unexpected calls, missing calls, excessive calls) trigger failures.
+
+5. **Reporting Phase:**
+   - GoogleTest combines assertion and mock verification results.
+   - Test runner prints detailed output for any failures or warnings.
+
+---
+
+## Visualizing Test Lifecycle & Data Flow
 
 ```mermaid
-sequenceDiagram
-  participant UserTest as User Test Code
-  participant TestFixture as Test Fixture
-  participant Assertion as Assertion Macro
-  participant MockObj as Mock Object
-  participant ResultCollector as Test Result Collector
-  participant TestRunner as Test Runner
+flowchart TD
+  A[Test Registration & Discovery] --> B[Global & Fixture Setup]
+  B --> C[Test Execution]
+  C --> D[Mock Interactions & Expectations Processed]
+  D --> E[Verification of Expectations]
+  E --> F[Test Fixture & Global Teardown]
+  F --> G[Result Capture & Reporting]
 
-  %% Test setup
-  TestRunner->>TestFixture: Construct
-  UserTest->>Assertion: Run assertions
-  UserTest->>MockObj: Call mock methods
-  MockObj->>ResultCollector: Record expectation successes/failures
-  Assertion->>ResultCollector: Record assertion results
-  UserTest-->>TestFixture: Finish running
-  TestFixture->>MockObj: Destruct (verify expectations)
-  MockObj->>ResultCollector: Record final verification
-  TestRunner->>ResultCollector: Aggregate
-  TestRunner->>User: Report results
+  subgraph Mock Handling
+    C --> D
+    D --> E
+  end
+
+  %% Notes
+  A:::phase;B:::phase;C:::phase;D:::phase;E:::phase;F:::phase;G:::phase;
+
+  classDef phase fill:#e3f2fd,stroke:#1e88e5,stroke-width:2px;
 ```
 
+---
+
+## Practical Tips for Users
+
+- **Define all mocks and expectations before running test code.** Setting expectations afterwards results in undefined behavior.
+- **Use test fixtures (`TEST_F`) to centralize setup and teardown, including common mock configuration.**
+- **Keep test methods focused on a single logical validation for clarity and maintainability.**
+- **Use `ON_CALL` for default mock behaviors and `EXPECT_CALL` only for interactions your test explicitly verifies.**
+- **Use `NiceMock`, `NaggyMock`, and `StrictMock` wrappers to control uninteresting call behaviors depending on your test tolerance for extraneous calls.**
+- **If you allocate mocks dynamically, ensure they are destroyed to trigger expectations verification, or explicitly verify and clear them when appropriate.**
 
 ---
 
-## Best Practices and Tips
+## Common Failure Scenarios & Troubleshooting
 
-- **Set Expectations Before Exercising Mocks**: Always define `EXPECT_CALL()` statements prior to any code that triggers mock method calls to ensure correct behavior verification.
+### 1. Unmet Expectations
 
-- **Use `ON_CALL()` for Default Behavior**: Use `ON_CALL()` to specify default mock method behavior without forcing expectations on every call.
+**Symptoms:** Test fails indicating some expected mock calls were not made.
 
-- **Distinguish Between Uninteresting and Unexpected Calls**: Uninteresting calls (to mock methods without expectations) generate warnings; unexpected calls violate expectations and cause test failures. Use `NiceMock` or `StrictMock` wrappers to control this behavior.
+**Cause:** Either the code under test did not call the mock method as expected, or the expectations were set incorrectly or incompletely.
 
-- **Manage Expectation Lifecycles**: Expectations are "sticky" by default and persist even after expected call counts are reached unless `RetiresOnSaturation()` is used to retire them when saturated.
-
-- **Take Advantage of `InSequence` and `After`**: Control call ordering when needed using `InSequence` or `After` clauses to specify sequential or partial order mandates.
-
-- **Review Verbose Logs for Debugging**: Run tests with `--gmock_verbose=info` to get detailed logs of mock expectations and calls including stack traces to aid troubleshooting.
-
+**Solution:**
+- Verify that the code calls the expected methods with matching arguments.
+- Enable `--gmock_verbose=info` to get detailed call-matching logs to diagnose matching problems.
 
 ---
 
-## Troubleshooting Common Issues
+### 2. Unexpected Calls
 
-- **Test Not Discovering your Tests**: Ensure you register tests with GoogleTest macros and link properly.
+**Symptoms:** Test fails due to mock methods being called with arguments or order not covered by expectations.
 
-- **Mock Expectation Failures**:
-  - Verify calls match expected arguments.
-  - Confirm the expected number of calls matches usage.
-  - Check whether expectations are defined before executing code.
+**Cause:** Insufficient expectations; mock was called in ways not anticipated.
 
-- **Unexpected or Uninteresting Call Warnings**:
-  - Use `EXPECT_CALL(...).Times(AnyNumber())` to catch uninteresting calls you allow.
-  - Use `NiceMock` to suppress warnings for uninteresting calls.
-
-- **Leaked Mocks Detected**:
-  - Make sure all heap-allocated mocks are deleted or use `Mock::AllowLeak()` explicitly if intentional.
-
-- **Overlapping Expectations**:
-  - Order matters. More specific expectations should be defined after more general ones.
-
+**Solution:**
+- Add explicit expectations covering the calls.
+- Use catch-all `EXPECT_CALL(mock, method(_)).Times(AnyNumber());` to allow other cases.
+- Consider `NiceMock` to suppress warnings if appropriate.
 
 ---
 
-## Related Components and Concepts
+### 3. Excessive Calls
 
-### Interaction with Other Documentation
+**Symptoms:** Mock method called more times than specified in expectations.
 
-- **Core Concepts & Terminology**: For basic GoogleTest and GoogleMock concepts that underpin the test lifecycle.
-- **Mock Object Lifecycle**: Covers specific lifecycle details for mock expectations and object states.
-- **Test Runner and Main Entry**: For how the test executable initializes and runs tests.
-- **Setting Expectations**: To master how to define mock method calls and behaviors.
-- **Strict, Naggy, and Nice Mocks**: To control severity of unexpected and uninteresting calls.
+**Cause:** The set `Times` cardinality is too narrow or missing `.RetiresOnSaturation()` if applicable.
 
+**Solution:**
+- Adjust `Times` to accommodate more calls.
+- Use `.RetiresOnSaturation()` if you intend expectations to become inactive after saturation.
+- Refactor test to better represent call sequences.
+
+---
+
+### 4. Leaked Mocks
+
+**Symptoms:** Test finalization detects that mock objects were never destroyed, causing expectations verification to be skipped.
+
+**Cause:** Mocks not properly cleaned up.
+
+**Solution:**
+- Ensure mock lifetimes are tied to test lifetimes.
+- Call `Mock::VerifyAndClearExpectations(&mock)` explicitly if you can't rely on destruction.
+- Use `Mock::AllowLeak(&mock)` to suppress warnings if leakage is intentional (not recommended).
 
 ---
 
 ## Summary
 
-Understanding the test lifecycle clarifies what happens when your test runs and why your assertions and mock expectations behave as they do. This empowers you to write robust, reliable tests and interpret failures meaningfully, unlocking the full power of GoogleTest and GoogleMock.
+The test lifecycle in GoogleTest orchestrates the discovery, execution, verification, and reporting of test cases in a reliable, automated manner, while GoogleMock extends this by enforcing interaction contracts via mock expectations. This design provides a clear, user-centric testing flow that simplifies the complex underpinning processes, empowers expressive test definitions, and ensures accurate feedback.
 
+For a complete mastery, pair your understanding of the lifecycle with detailed guides on:
 
----
-
-## Additional References
-
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html)
-- [Setting Expectations: EXPECT_CALL and ON_CALL](https://google.github.io/googletest/reference/mocking.html#EXPECT_CALL)
-- [Mocking Best Practices](https://google.github.io/googletest/gmock_cook_book.html#BestPractices)
-- [Strict, Naggy, and Nice Mocks](https://google.github.io/googletest/gmock_cook_book.html#StrictNaggyNice)
-
+- [Test Structure and Lifecycle](../api-reference/core-api/test-structure)
+- [Mocking Methods and Classes](../api-reference/mocking-api/mock-methods)
+- [Expectations and Actions](../api-reference/mocking-api/expectations-actions)
+- [Controlling Mock Behavior](../api-reference/mocking-api/mock-behavior-control)
 
 ---
 
-## Visualization: Test Lifecycle
+## Additional Resources
 
-```mermaid
-flowchart TD
-
-  subgraph Discovery
-    TD1["Test Registry: Discovered Tests"]
-  end
-
-  subgraph Test Run
-    TD1 --> Setup["Construct Fixture & Setup"]
-    Setup --> Execution["Run Test Body"]
-    Execution --> Assertions["Assertions Evaluated & Recorded"]
-    Execution --> Mocks["Mock Methods Called & Verified"]
-    Mocks --> Verification["Mock Expectation Final Verification"]
-    Assertions --> Results["Record Results"]
-    Verification --> Results
-    Results --> Teardown["Fixture Destructed & Cleanup"]
-    Teardown --> NextTest["Next Test or End"]
-  end
-
-  subgraph Runner
-    NextTest -->|More Tests| Setup
-    NextTest -->|Done| Summary["Run Summary & Report"]
-  end
-
-  style Discovery fill:#f0f8ff,stroke:#007acc
-  style Test Run fill:#e6f7ff,stroke:#005f99
-  style Runner fill:#d9ebff,stroke:#004586
-
-```
-
-This diagram maps the key phases of the test lifecycle and how they loop until all tests are run.
+- **Understanding the use of `EXPECT_CALL()` and `ON_CALL()`**: see the [gMock Cookbook - Knowing When to Expect](docs/gmock_cook_book.md#UseOnCall).
+- **Debugging mismatched expectations**: run tests with `--gmock_verbose=info` for call traces.
+- **Managing test setup and teardown**: refer to [Test Structure and Lifecycle](../api-reference/core-api/test-structure).
+- **Mock Object Verification**: learn how destruction and explicit verification work together to enforce expectations.
 
 ---
