--- a/concepts/integration-and-scalability/scalability-and-performance.mdx
+++ b/concepts/integration-and-scalability/scalability-and-performance.mdx
@@ -1,189 +1,139 @@
 ---
-title: "Scalability and Performance Characteristics"
-description: "Learn about the scalability considerations and performance characteristics of the testing framework. Understand how test discovery, assertion strategies, and parallelization contribute to robust and fast testing cycles in projects both small and large."
+title: "Scalability and Performance"
+description: "Outlines key considerations for maintaining performant and scalable test suites as project size grows, including memory usage, parallel test execution, and how GoogleTest automatically discovers and manages large numbers of tests."
 ---
 
-# Scalability and Performance Characteristics
+# Scalability and Performance
 
-Understanding how GoogleTest scales and performs is essential for integrating it effectively into projects of all sizes. This guide explores how GoogleTest's design supports fast and robust testing cycles through efficient test discovery, assertion strategies, and parallel execution.
+As projects grow larger and testing suites become more complex, maintaining high performance and scalability is crucial to ensure tests provide fast feedback and do not become a bottleneck in your development workflow. This guide outlines key concepts and best practices for managing scalable and performant test suites in GoogleTest.
 
 ---
 
-## Test Discovery and Registration
+## Understanding Scalability in Testing
 
-GoogleTest automatically discovers tests by registering them during static initialization. This design ensures minimal overhead while enabling rapid identification and execution of tests.
+Scalability in testing refers to the ability of your test framework to efficiently handle increasing numbers and complexity of tests without significant degradation in speed or resource usage. GoogleTest is designed to scale gracefully with large codebases, discovering and managing many tests efficiently.
 
-- Tests are registered when the test program loads, allowing the framework to build an organized collection of tests before execution.
-- The registration mechanism supports multiple test suites and fixtures, ensuring modularity and scalability.
+### Automatic Test Discovery
 
-### How Test Discovery Enhances Performance
+GoogleTest automatically discovers tests at runtime using the registration mechanism built into the framework. This allows your test binaries to include many test cases and suites, which GoogleTest organizes and executes efficiently.
 
-Test discovery is performed once upfront, avoiding costly overhead during test execution. Users can rely on this for quick startup times, especially in large test suites containing thousands of tests.
+### Parallel Test Execution
 
-**Example:**
+To speed up test execution, consider running tests in parallel. While GoogleTest natively supports sharding and filtering via command-line flags, parallel execution tools and test runners (e.g., Bazel, CTest, or third-party runners) orchestrate concurrent test runs to utilize multiple CPU cores effectively.
 
-```cpp
-// Defining tests automatically registers them
-TEST(FactorialTest, HandlesZeroInput) {
-  EXPECT_EQ(Factorial(0), 1);
-}
-```
+### Managing Memory Usage
 
-There’s no explicit registration call needed; GoogleTest manages this behind the scenes, keeping discovery performance optimal.
+Large test suites inevitably use more memory. GoogleTest’s architecture minimizes memory footprint by lazy initialization and avoids unnecessary copies of test data. However, it remains important to review individual tests to avoid memory-heavy fixtures or excessive global state.
 
+---
 
-## Assertion Strategies and Execution Efficiency
+## Performance Considerations
 
-GoogleTest delivers a broad range of assertion macros that are designed for efficiency:
+Optimizing test performance includes not only efficient test discovery and execution but also writing tests that run quickly and consume minimal resources.
 
-- Assertions like `EXPECT_*` provide non-fatal failures, allowing tests to continue and detect multiple issues in a single run.
-- Fatal assertions (`ASSERT_*`) abort the current test execution early to save time when continuing makes no sense.
+### Writing Efficient Tests
 
-### Effective Use of Assertions
+- **Minimize Expensive Setup:** Use test fixtures thoughtfully to share expensive setup steps among related tests.
+- **Mock Dependencies:** Use GoogleMock to isolate and speed up tests by replacing slow external dependencies (e.g., network, database).
+- **Prefer Lightweight Assertions:** Use precise assertions that fail fast to avoid unnecessary computation.
 
-Leveraging the right assertion types helps reduce unnecessary test execution time while maximizing diagnostic output.
+### Reducing Runtime Overhead
 
-**Scenario:**
+- **Avoid Unnecessary Prints and Logs:** Limit logging in tests, as excessive output can slow down test execution.
+- **Use Conditional Checks and Filters:** Leverage GoogleTest command-line filtering to run subsets of tests during development.
 
-- Use `ASSERT_*` when further test code depends on the assertion passing (e.g., pointer validity to avoid crashes).
-- Use `EXPECT_*` when reporting multiple issues at once is beneficial.
+### Measuring and Profiling
 
-### Example
+Periodically profile your test runs to identify slow tests or bottlenecks using tools such as `time`, profilers, or GoogleTest's built-in verbose options.
 
-```cpp
-TEST(VectorTest, SizeAndContent) {
-  std::vector<int> v = {1, 2, 3};
-  ASSERT_FALSE(v.empty()) << "Vector should not be empty";
-  EXPECT_EQ(v[0], 1);
-  EXPECT_EQ(v[1], 2);
-}
-```
+---
 
-This strategy limits wasted cycles and yields precise, actionable failure reports.
+## Integration with Build and CI Systems
 
+To handle scalability effectively, integrate GoogleTest with build and continuous integration (CI) systems that support:
 
-## Parallel Test Execution
+- **Incremental Builds:** Only rebuild changed tests to speed up iteration.
+- **Test Sharding:** Split tests into smaller groups to run concurrently.
+- **Warm-up and Caching:** Cache results or test data when safe to do so.
 
-GoogleTest supports parallel test execution to accelerate test runs in large projects.
+For details, see [Integrating GoogleTest with Build and CI Systems](https://google.github.io/googletest/overview/features-architecture/integration-other-systems).
 
-- The framework allows multiple test processes or threads to run tests concurrently, greatly reducing wall clock time.
-- Users can leverage external test runners or CI pipelines to shard tests safely.
+---
 
-### Benefits of Parallelism
+## Practical Tips for Large Test Suites
 
-- Distributes expensive or long-running tests across CPUs/cores.
-- Improves feedback speed without changing test code.
+- **Organize Tests Logically:** Use test fixtures and suites to group related tests.
+- **Use Test Filters:** Run only relevant tests during local development.
+- **Adopt Mocking Early:** Mock slow or non-deterministic dependencies to keep tests fast.
+- **Regularly Monitor Runtime:** Keep an eye on average test runtime growth.
+- **Automate Performance Checks:** Integrate test timing thresholds in CI to detect regressions early.
 
-### Best Practices for Parallelism
+---
 
-- Ensure tests are independent and do not share mutable global state to avoid race conditions.
-- Use proper synchronization if shared resources are involved.
+## Troubleshooting Common Performance Issues
 
-### Example Parallel Workflows
+| Problem                              | Solution                                                         |
+|------------------------------------|------------------------------------------------------------------|
+| Slow test discovery or startup      | Use filtered runs, reduce global state, or disable unused tests. |
+| Tests taking too long to execute    | Profile tests, split large tests, mock external dependencies.    |
+| Excessive memory usage              | Avoid large fixtures, deallocate resources promptly.             |
+| Test flakiness under parallel runs | Synchronize shared resources, avoid global mutable state.        |
 
-With external tooling:
-
-```bash
-# Run tests in 8 parallel shards
-bazel test --test_sharding_strategy=explicit --test_shards=8 //...
-```
-
-Or with scripts managing test subsets.
-
-
-## Test Scenario: Handling Large-Scale Test Suites
-
-GoogleTest's internal design is optimized for scalability:
-
-- Test registration is lock-free and efficient, supporting thousands of tests.
-- Assertions are lightweight, using macros that minimize runtime overhead.
-- Supports filtering and repetition for focused test runs.
-
-### Common Pitfalls and How to Avoid Them
-
-- Avoid too many fatal assertions when non-fatal would suffice, to prevent premature test exit.
-- Avoid tests with hidden dependencies that hurt parallel test reliability.
-- Monitor test suite startup time, especially with very large numbers of tests.
-
-
-## Performance Tips and Recommendations
-
-- Use test filtering (`--gtest_filter`) to focus tests during development, speeding up feedback.
-- Leverage mock objects to replace expensive dependencies, improving test speed.
-- Use `NiceMock` or `StrictMock` wrappers judiciously to balance strictness and test maintainability.
-- Move reusable fixture setup to `SetUpTestSuite` for expensive shared initialization.
-
-
-## Troubleshooting Performance Issues
-
-### Common Scenarios
-
-- **Slow test discovery:** Usually only happens if excessive static initialization is present. Refactor to reduce static construction overhead.
-- **Tests affected by global state:** Can cause flaky or slow tests; remediate by isolating or mocking shared components.
-- **Unexpected test serialization:** Check for global locks or shared mutable state.
-
-### Diagnostic Tools
-
-- Use `--gtest_list_tests` to verify test registration timing.
-- Enable verbose logging with `--gmock_verbose=info` for detailed mock call insights.
-- Profile test executions to pinpoint bottlenecks.
-
+---
 
 ## Summary
 
-GoogleTest strikes a balance between scalability and speed by combining effective test discovery, assertion management, and parallelization. This ensures tests remain fast and reliable as their coverage and number grow.
+GoogleTest is built to handle large-scale test suites efficiently, but achieving optimal scalability and performance requires thoughtful test design, effective use of mocking, and integration with parallel execution strategies in your build infrastructure. Applying these principles ensures your tests run quickly, reliably, and provide fast feedback in growing projects.
 
 ---
 
-## Additional Resources
+## References and Further Reading
 
-- [GoogleTest Primer](https://github.com/google/googletest/blob/main/docs/primer.md) - foundational concepts and usage.
-- [gMock for Dummies](https://google.github.io/googletest/gmock_for_dummies.html) - basics of mocking for better test performance.
-- [Performance Optimization for Test Suites](https://github.com/google/googletest/blob/main/guides/advanced-and-best-practices/performance-optimization.md) - actionable strategies.
-- [Test Suite Best Practices](https://github.com/google/googletest/blob/main/guides/advanced-and-best-practices/best-practices.md) - maintainability and speed tips.
-
-For detailed API and advanced topics, see the navigation sections under "Concepts" and "Guides."
+- [GoogleTest System Architecture](https://google.github.io/googletest/overview/features-architecture/architecture-diagram)
+- [Integrating with Build and CI Systems](https://google.github.io/googletest/overview/features-architecture/integration-other-systems)
+- [Mocking in practice](https://google.github.io/googletest/guides/core-test-workflows/mocking-intro)
+- [Performance Best Practices](https://google.github.io/googletest/guides/advanced-usage-and-integration/performance-best-practices)
 
 ---
 
-## Visualizing the Flow of Test Execution and Performance Scaling
+## Diagram: Test Execution Flow and Scalability
 
 ```mermaid
 flowchart TD
-  Start([Test Program Start]) --> RegisterTests["Test Registration & Discovery"]
-  RegisterTests --> BuildTestList["Build Test List & Suites"]
-  BuildTestList --> FilterTests["Apply Test Filters"]
-  FilterTests --> ParallelRun{Is Parallel Execution Enabled?}
+  Start([Start Test Run]) --> DiscoverTests["Discover Registered Tests"]
+  DiscoverTests -->|Build Test Suite| BuildSuite["Build Test Suite Data Structures"]
+  BuildSuite --> ExecuteTests["Execute Tests"]
+  ExecuteTests -->|Sequential or Parallel| RunLoop["Test Run Loop"]
+  RunLoop --> CollectResults["Collect Test Results"]
+  CollectResults --> ReportResults["Report Results"]
+  ReportResults --> End([End Test Run])
 
-  ParallelRun -- Yes --> RunTestsInParallel["Run Tests in Parallel Worker Threads/Processes"]
-  ParallelRun -- No --> RunTestsSerially["Run Tests Serially"]
-
-  subgraph Test Execution
-    RunTestsInParallel --> ExecTests["Execute Individual Tests"]
-    RunTestsSerially --> ExecTests
-
-    ExecTests --> VerifyAssertions["Perform Assertions & Expectation Checks"]
-    VerifyAssertions --> HandleFailures["Report Failures and Logging"]
-    HandleFailures --> NextTest{More Tests?}
-    NextTest -- Yes --> ExecTests
-    NextTest -- No --> Completed([All Tests Completed])
+  %% Parallel Branch
+  subgraph Parallel Execution
+    RunLoop --> ParallelSplit["Split Tests into Shards"]
+    ParallelSplit --> ParallelWorkers["Run Test Shards Concurrently"]
+    ParallelWorkers --> MergeResults["Merge Results"]
+    MergeResults --> CollectResults
   end
 
-  Completed --> ReportResults["Generate Summary Report"]
-  ReportResults --> End([Test Program End])
-
-  classDef decision fill:#f9f,stroke:#333,stroke-width:2px;
-  class ParallelRun,NextTest decision;
+  %% Styling
+  classDef process fill:#f9f,stroke:#333,stroke-width:1px;
+  class Start,End process;
 ```
 
-This flow highlights how test discovery and filtering happen once before execution, while actual execution can run in parallel or serially depending on the configuration, maximizing performance and scalability.
+This diagram illustrates the general process GoogleTest follows to discover, organize, execute, and report on tests, highlighting points where performance optimizations such as parallel execution can be applied.
 
 ---
 
-<Info>
-GoogleTest's integrated abilities for test discovery, efficient assertions, and parallel execution empower teams to run comprehensive test suites efficiently, supporting continuous integration and large-scale testing demands.
-</Info>
+## Best Practices Checklist
 
-<Tip>
-For best performance in large projects, isolate tests to avoid shared state, use parallel execution where possible, and leverage filtering to accelerate iterations during development.
-</Tip>
+- Use `EXPECT_CALL` and `ON_CALL` effectively to mock dependencies and minimize slow external interactions.
+- Structure tests into logical groups and suites for better parallelization and selective runs.
+- Use test filters (`--gtest_filter`) to speed up iterative development.
+- Consider test sharding strategies for large CI pipelines.
+- Regularly measure and profile test durations and memory usage.
+- Avoid shared mutable global state to facilitate safe parallel execution.
+
+---
+
+By adhering to these guidelines, GoogleTest users can maintain high-quality, scalable test suites that keep pace with growing projects and evolving codebases.
